# rag-to-context

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
demo/: Dockerfile  demo.py  embedder.py  entrypoint.sh  pyproject.toml  server.py
demo/crawler/: cleaner.py  crawl.py  fetch_financials.py
demo/data/: annual_report_text.txt  balance_sheet.csv  cash_flow.csv  graph.json  income_statement.csv  key_metrics.csv
demo/data/pages/: about-us.html.txt  about-us__accessibility.html.txt  about-us__accessibility__equal-access-toolkit.html.txt  about-us__accessibility__hidden-disabilities-sunflower.html.txt  about-us__accessibility__neuroinclusive-banking.html.txt  about-us__careers.html.txt  about-us__careers__analytics.html.txt  about-us__careers__business-private-banking.html.txt  about-us__careers__careercomeback.html.txt  about-us__careers__commbank-life.html.txt  about-us__careers__customer-service.html.txt  about-us__careers__cyber.html.txt  about-us__careers__engineering.html.txt  about-us__careers__faqs.html.txt  about-us__careers__graduate-intern-programs.html.txt  about-us__careers__guidance-support-services.html.txt  about-us__careers__india.html.txt  about-us__careers__institutional-banking-markets.html.txt  about-us__careers__operational-risk-and-compliance.html.txt  about-us__careers__retail-banking-services.html.txt  about-us__careers__rewards-and-benefits.html.txt  about-us__careers__support.html.txt  about-us__investors.html.txt  (+691 more)
demo/rag/: __init__.py  advanced.py  agentic.py  corpus.py  graph_rag.py  modular.py  naive.py
(+7 files in other folders)
